--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "formik": "^2.4.6",
     "framer-motion": "^11.1.7",
     "localforage": "^1.10.0",
