--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
