--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "memento",
+  "name": "memento-frontend",
   "version": "0.1.0",
   "private": true,
+  "description": "Frontend for Memento",
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
@@ -10,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "formik": "^2.4.6",
@@ -27,10 +30,13 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "nodemon": "^3.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/index.js",
+    "backend": "nodemon server/index.js",
+    "frontend": "react-scripts start --ignore client",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
