--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,8 @@
   "name": "memento-frontend",
   "version": "1.0.0",
   "private": true,
-  "description": "Frontend for Memento",
-  "proxy": "http://localhost:5000",
+  "description": "Front End for Memento",
+  "proxy": "http://localhost:9000",
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
