Install AWS SDK for DynamoDB and S3

--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.572.0",
+    "@aws-sdk/client-s3": "^3.572.0",
     "connect-timeout": "^1.9.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
