--- a/server/package.json
+++ b/server/package.json
@@ -3,19 +3,23 @@
   "version": "1.0.0",
   "private": true,
   "description": "Backend for Memento",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.572.0",
+    "@aws-sdk/client-cognito-identity": "^3.574.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.574.0",
+    "@aws-sdk/client-dynamodb": "^3.574.0",
     "@aws-sdk/client-s3": "^3.572.0",
     "connect-timeout": "^1.9.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0"
