--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "date-fns-tz": "^3.1.3",
     "formik": "^2.4.6",
     "framer-motion": "^11.1.7",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
