--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "description": "Memento web app",
-  "dependencies": {},
+  "dependencies": {
+    "fuse.js": "^7.0.0"
+  },
   "scripts": {
     "start": "node server/server.js",
     "frontend-dev": "cd client && npm install && npm start",
