--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "date-fns-tz": "^3.1.3",
     "formik": "^2.4.6",
     "framer-motion": "^11.1.7",
+    "fuse.js": "^7.0.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
