--- a/server/package.json
+++ b/server/package.json
@@ -17,12 +17,14 @@
     "@aws-sdk/client-s3": "^3.572.0",
     "@aws-sdk/lib-dynamodb": "^3.575.0",
     "@aws-sdk/util-dynamodb": "^3.574.0",
+    "chalk": "^4.0.0",
     "connect-timeout": "^1.9.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-ws": "^5.0.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1"
